--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ author_profile: true
 title: " "
 excerpt: " "
 header:
-  overlay_image: /img/banner.png
-  caption: "Mont Blanc seen from Aguille de Varan"
+  overlay_image: /img/IDENT.png
+  caption: "IDENT field site Sault Ste. Marie, ON, Canada"
 
 toc: true
   
