--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 
-title: " "
+title: "Tree Diversity x Water Availability"
 excerpt: " "
 header:
   overlay_image: /img/IDENT.png
