updated pages and title pic

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: home
 author_profile: true
 
-title: "Tree Diversity x Water Availability"
+title: ""
 excerpt: " "
 header:
-  overlay_image: /img/IDENT.png
-  caption: "IDENT field site Sault Ste. Marie, ON, Canada"
+  overlay_image: /img/jmt_website
+  caption: "John Muir Trail 2018"
 
 toc: true
   
