fixed title pic

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: home
 author_profile: true
 
-title: ""
+title: " "
 excerpt: " "
 header:
-  overlay_image: /img/jmt_website
+  overlay_image: /img/jmt_website.png
   caption: "John Muir Trail 2018"
 
 toc: true
