smaller image git status ls

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 title: " "
 excerpt: " "
 header:
-  overlay_image: /img/jmt_website.png
+  overlay_image: /img/jmt_website_small.png
   caption: "John Muir Trail 2018"
 
 toc: true
