title image settings

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: home
 author_profile: true
 
 title: " "
-excerpt: " "
+excerpt: "\n\n\n\n\n\n\n"
 header:
-  overlay_image: /img/jmt_website_small.png
+  overlay_image: /img/jmt_website_skinny.png
   caption: "John Muir Trail 2018"
 
 toc: true
