icons and new page titles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 title: " "
 excerpt: "\n\n\n\n\n\n\n"
 header:
-  overlay_image: /img/jmt_website_skinny.png
+  overlay_image: /img/jmt_backpack.png
   caption: "John Muir Trail 2018"
 
 toc: true
