font sizes and about

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ author_profile: true
 title: " "
 excerpt: "\n\n\n\n\n\n\n"
 header:
-  overlay_image: /img/jmt_backpack.png
-  caption: "John Muir Trail 2018"
+  overlay_image: /img/IDENT.png
+  caption: "IDENT, Sault Ste. Marie"
 
 toc: true
   
