--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 ---
-layout: home
+layout: splash
 author_profile: true
-
-title: " "
-excerpt: "\n\n\n\n\n\n\n"
+permalink: /
 header:
   overlay_image: /img/IDENT.png
   caption: "IDENT, Sault Ste. Marie"
-
-toc: true
-  
+excerpt: "nbsp"
+feature_row:
+  - image_path: /img/about_me.png
+    alt: "welcome"
+    title: "Welcome to my page"
+    excerpt: "Hi, click this link to get to know me!"
+    url: "/docs/about_me/"
+    btn_class: "btn--primary"
+    btn_label: "About me"
+  - image_path: /img/research_logo.png
+    alt: "project"
+    title: "Research Project"
+    excerpt: "Can biodiversity offset the negative effects of drought on nutrient cycling in forests?"
+    url: "/docs/research/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
+  - image_path: /img/15N_label.png
+    alt: "pictures"
+    title: "Field Pictures"
+    excerpt: "Nature, soil, trees, and more!"
+    url: "/docs/field_pictures/"
+    btn_class: "btn--primary"
+    btn_label: "Discover"      
 ---
+
+{% include feature_row %}
+ 
