adding pages to splash home

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 layout: splash
 author_profile: true
 permalink: /
+title: ""
 header:
   overlay_image: /img/IDENT.png
   caption: "IDENT, Sault Ste. Marie"
-excerpt: "nbsp"
+excerpt: nbsp
 feature_row:
   - image_path: /img/about_me.png
     alt: "welcome"
     title: "Welcome to my page"
     excerpt: "Hi, click this link to get to know me!"
-    url: "/docs/about_me/"
+    url: "/about_me/"
     btn_class: "btn--primary"
     btn_label: "About me"
   - image_path: /img/research_logo.png
     alt: "project"
     title: "Research Project"
     excerpt: "Can biodiversity offset the negative effects of drought on nutrient cycling in forests?"
-    url: "/docs/research/"
+    url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /img/15N_label.png
