--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ permalink: /
 title: ""
 header:
   overlay_image: /img/IDENT.png
-  caption: "IDENT, Sault Ste. Marie"
-excerpt: nbsp
+  caption: "IDENT, Sault Ste. Marie, Ontario, Canada"
+excerpt: ""
 feature_row:
   - image_path: /img/about_me.png
     alt: "welcome"
