--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@ feature_row:
     url: "/about_me/"
     btn_class: "btn--primary"
     btn_label: "About me"
+  - image_path: /img/ssm_trio.png
+    alt: "pictures"
+    title: "Field Pictures"
+    excerpt: "Nature, soil, trees, and more!"
+    url: "/docs/field_pictures/"
+    btn_class: "btn--primary"
+    btn_label: "Discover"
   - image_path: /img/research_logo.png
     alt: "project"
     title: "Research Project"
     excerpt: "Can biodiversity offset the negative effects of drought on nutrient cycling in forests?"
     url: "/research/"
     btn_class: "btn--primary"
-    btn_label: "Learn more"
-  - image_path: /img/15N_label.png
-    alt: "pictures"
-    title: "Field Pictures"
-    excerpt: "Nature, soil, trees, and more!"
-    url: "/docs/field_pictures/"
-    btn_class: "btn--primary"
-    btn_label: "Discover"      
+    btn_label: "Learn more"      
 ---
 
 {% include feature_row %}
