updated figure legends, changed index and research order

--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@ feature_row:
     url: "/about_me/"
     btn_class: "btn--primary"
     btn_label: "About me"
-  - image_path: /img/ssm_trio.png
-    alt: "pictures"
-    title: "Field Pictures"
-    excerpt: "Nature, soil, trees, and more!"
-    url: "/docs/field_pictures/"
-    btn_class: "btn--primary"
-    btn_label: "Discover"
   - image_path: /img/research_logo.png
     alt: "project"
     title: "Research Project"
@@ -29,6 +22,13 @@ feature_row:
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
+  - image_path: /img/15N_label_wide.jpg
+    alt: "pictures"
+    title: "Field Pictures"
+    excerpt: "Nature, soil, trees, and more!"
+    url: "/docs/field_pictures/"
+    btn_class: "btn--primary"
+    btn_label: "Discover"
 ---
 
 {% include feature_row %}
