index bio new, fig align field pics

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ feature_row:
   - image_path: /img/research_logo.png
     alt: "project"
     title: "Research Project"
-    excerpt: "Can biodiversity offset the negative effects of drought on nutrient cycling in forests?"
+    excerpt: "Tree diversity, nutrient cycling & drought"
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
   - image_path: /img/15N_label_wide.jpg
     alt: "pictures"
     title: "Field Pictures"
-    excerpt: "Nature, soil, trees, and more!"
+    excerpt: "Lots of trees, soil, and more!"
     url: "/docs/field_pictures/"
     btn_class: "btn--primary"
     btn_label: "Discover"
