add email, fix phd clear logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ feature_row:
     url: "/about_me/"
     btn_class: "btn--primary"
     btn_label: "About me"
-  - image_path: /img/research_logo_clear.png
+  - image_path: /img/logo_clear_wide.png
     alt: "project"
     title: "Research Project"
     excerpt: "Tree diversity, nutrient cycling & drought"
