brief change to research description index

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ feature_row:
     btn_label: "About me"
   - image_path: /img/logo_clear_wide.png
     alt: "project"
-    title: "Research Project"
-    excerpt: "Tree diversity, nutrient cycling & drought"
+    title: "Research Projects"
+    excerpt: "Salt marshes, mixed forests & nutrient cycling"
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
