--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ feature_row:
   - image_path: /img/logo_clear_wide.png
     alt: "project"
     title: "Research Projects"
-    excerpt: "Salt marshes, mixed forests & nutrient cycling"
+    excerpt: "Ecology, biogeochemistry & global changes"
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
